--- a/mesaredonda.css
+++ b/mesaredonda.css
@@ -142,6 +142,7 @@ body.modo-claro .toggle-botao .icone {
   margin-bottom: 3rem;
   padding-top: 6vh;
 }
+
 /* cards da mesa redonda*/
 .cards-container {
   display: flex;
@@ -163,22 +164,26 @@ body.modo-claro .toggle-botao .icone {
   align-items: center;
   transition: transform 0.3s;
 }
+
 .card img {
   width: 100%;
   height: 260px;
   border-radius: 0.35rem;
   object-fit: cover;
 }
+
 .card h2 {
   font-size: 1.25rem;
   margin: 1rem 0 0.5rem;
   color: #000;
 }
+
 .card .data {
   font-size: 0.9rem;
   margin-bottom: 0.5rem;
   color: #333;
 }
+
 .card .btn {
   margin: 1rem;
   padding: 0.75rem 1.5rem;
@@ -284,7 +289,8 @@ body.modo-claro .toggle-botao .icone {
   cursor: pointer;
   text-decoration: none;
   transition: all 0.3s ease;
-  margin-top: 0.8rem; /* espaço entre card e botão */
+  margin-top: 0.8rem;
+  /* espaço entre card e botão */
 }
 
 .card-wrapper .btn-certificado:hover {
