--- a/atividades.css
+++ b/atividades.css
@@ -41,7 +41,7 @@ body.modo-claro .header {
 }
 
 /* Navegação */
-.navigation_header {
+.navigation_header.desktop-menu {
   display: flex;
   gap: 5vw;
 }
@@ -275,10 +275,66 @@ body.modo-claro .toggle-botao .icone {
 
 /* Responsividade */
 @media (max-width: 768px) {
-  .navigation_header {
+
+  .menu-toggle {
+    display: block;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    margin-left: 1rem;
+    margin-top: -0.3rem;
+  }
+  
+  .toggle-botao {
+    margin-left: auto;
+  }
+
+  .mobile-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #000;
+    padding: 1.5rem 1rem;
+    display: none;
     flex-direction: column;
+    gap: 1.2rem;
+    text-align: center;
+    z-index: 999;
+  }
+
+  .mobile-menu.show {
+    display: flex;
+  }
+
+  .mobile-menu a {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+  }
+
+  .header {
+    display: flex;
     align-items: center;
-    gap: 2rem;
+    justify-content: space-between;
+    padding: 1rem 1.25rem;
+    height: 4.5rem;
+    position: relative;
+  }
+
+  .header img {
+    max-height: 3rem;
+  }
+
+  .navigation_header.desktop-menu {
+    display: none !important;
+  }
+
+  .toggle-botao {
+    margin-left: auto;
   }
 
   .atividade h2 {
@@ -302,54 +358,6 @@ body.modo-claro .toggle-botao .icone {
     font-size: 1rem;
     padding: 0.8rem 1.2rem;
   }
-}
-
-
-/* REPONSIVIDADE */
-
-@media (max-width: 370px) {
-  .navigation_header {
-    gap: 3vw;
-  }
-
-  .navigation_header a {
-    font-size: 0.75rem;
-    letter-spacing: 0.025rem;
-  }
-
-}
-
-@media (max-width: 480px) {
-  .header img {
-    max-height: 3rem;
-  }
-
-  .navigation_header a {
-    font-size: 0.875rem;
-    letter-spacing: 0.05rem;
-  }
-
-  .footer {
-    display: grid;
-  }
-
-}
-
-@media (max-width: 768px) {
-  .header {
-    gap: 1rem;
-    padding: 1rem 2rem 1rem 0;
-  }
-
-  .header img {
-    max-height: 4rem;
-  }
-
-  .navigation_header {
-    flex-wrap: wrap;
-    gap: 1rem;
-    flex-direction: row;
-  }
 
   .footer {
     flex-direction: column;
@@ -357,11 +365,16 @@ body.modo-claro .toggle-botao .icone {
     text-align: center;
   }
 
+  .footer .footer-info {
+    align-items: center;
+  }
+
+  .footer .footer-info div {
+    justify-content: center;
+  }
+
   .footer .footer-logos {
     justify-content: center;
   }
 
-  .footer .footer-logos img {
-    height: 3rem;
-  }
 }
