--- a/membros.css
+++ b/membros.css
@@ -31,6 +31,10 @@ body.modo-claro {
   color: var(--texto-dark);
 }
 
+body.modo-claro .header {
+  background: linear-gradient(to right, var(--gradiente-inicial), #0476A3);
+}
+
 /* Header */
 .header {
   display: flex;
@@ -51,7 +55,7 @@ body.modo-claro {
 }
 
 /* Navegação */
-.navigation_header {
+.navigation_header.desktop-menu{
   display: flex;
   gap: 5vw;
 }
@@ -232,6 +236,11 @@ body.modo-claro .toggle-botao .icone {
   color: var(--azul-principal);
 }
 
+.menu-toggle,
+.mobile-menu {
+  display: none;
+}
+
 /* Responsividade */
 @media (max-width: 768px) {
   .navigation_header {
@@ -333,19 +342,66 @@ body.modo-claro .toggle-botao .icone {
 }
 
 @media (max-width: 768px) {
+
+  .menu-toggle {
+    display: block;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    margin-left: 1rem;
+    margin-top: -0.3rem;
+  }
+  
+  .toggle-botao {
+    margin-left: auto;
+  }
+
+  .mobile-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #000;
+    padding: 1.5rem 1rem;
+    display: none;
+    flex-direction: column;
+    gap: 1.2rem;
+    text-align: center;
+    z-index: 999;
+  }
+
+  .mobile-menu.show {
+    display: flex;
+  }
+
+  .mobile-menu a {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+  }
+
   .header {
-    gap: 1rem;
-    padding: 1rem 2rem 1rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 1.25rem;
+    height: 4.5rem;
+    position: relative;
   }
 
   .header img {
-    max-height: 4rem;
+    max-height: 3rem;
   }
 
-  .navigation_header {
-    flex-wrap: wrap;
-    gap: 1rem;
-    flex-direction: row;
+  .navigation_header.desktop-menu {
+    display: none !important;
+  }
+
+  .toggle-botao {
+    margin-left: auto;
   }
 
   .footer {
@@ -354,11 +410,15 @@ body.modo-claro .toggle-botao .icone {
     text-align: center;
   }
 
-  .footer .footer-logos {
+  .footer .footer-info {
+    align-items: center;
+  }
+
+  .footer .footer-info div {
     justify-content: center;
   }
 
-  .footer .footer-logos img {
-    height: 3rem;
+  .footer .footer-logos {
+    justify-content: center;
   }
 }
