--- a/tutoria.css
+++ b/tutoria.css
@@ -51,7 +51,7 @@ body.modo-claro .header {
   max-height: 5rem;
 }
 
-.navigation_header {
+.navigation_header.desktop-menu{
   display: flex;
   gap: 5vw;
 }
@@ -284,23 +284,71 @@ tr:hover {
   color: #00BFFF;
 }
 
+.menu-toggle,
+.mobile-menu {
+  display: none;
+}
+
 @media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    margin-left: 1rem;
+    margin-top: -0.3rem;
+  }
+  
+  .toggle-botao {
+    margin-left: auto;
+  }
+
+  .mobile-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #000;
+    padding: 1.5rem 1rem;
+    display: none;
+    flex-direction: column;
+    gap: 1.2rem;
+    text-align: center;
+    z-index: 999;
+  }
+
+  .mobile-menu.show {
+    display: flex;
+  }
+
+  .mobile-menu a {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+  }
+
   .header {
-    gap: 1rem;
-    padding: 1rem 2rem 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 1.25rem;
+    height: 4.5rem;
+    position: relative;
   }
 
   .header img {
-    max-height: 4rem;
+    max-height: 3rem;
   }
 
-  .navigation_header {
-    flex-wrap: wrap;
-    gap: 1rem;
+  .navigation_header.desktop-menu {
+    display: none !important;
   }
 
-  .descricao{
-    padding: 0 1rem;
+  .toggle-botao {
+    margin-left: auto;
   }
 
   .footer {
@@ -309,12 +357,16 @@ tr:hover {
     text-align: center;
   }
 
-  .footer .footer-logos {
+  .footer .footer-info {
+    align-items: center;
+  }
+
+  .footer .footer-info div {
     justify-content: center;
   }
 
-  .footer .footer-logos img {
-    height: 3rem;
+  .footer .footer-logos {
+    justify-content: center;
   }
 }
 
